@@ -1155,6 +1155,23 @@ Description: \n\r\
 Gives a mob natural resistances and immunities. See Prop_HaveResister for more \
 information. 
 
+PROP_RESTRICTSKILLS=\
+Property   : Prop_RestrictSkills\n\r\
+Targets    : Room, Area, MOB, Item\n\r\
+Parameters : SKILLS="[ABILITYID,...]" MESSAGE="[STRING]"\n\r\
+Parameters : ONLYROOMS="[DOMAIN,...]" NEVERROOMS="[DOMAIN,...]"
+Example    : SKILLS="Spell_Sleep,Skill_Recall" MESSAGE="No!" ONLYROOMS="UNDERWATER,AIR"\n\r\
+Description: \n\r\
+Cancels the effects of the listed spells/skills, and can be restricted by location.  \
+The only required parameter is SKILLS, which is a comma-delimited list of Ability IDs. \
+Optional parameters includes MESSAGE, to change the skill users error message, ONLYROOMS \
+to restrict the skill everywhere except the comma delimited list of DOMAIN strings, and \
+NEVERROOMS to restrict the skill only in the comma delimited list of DOMAIN strings.  DOMAINS \
+include: CITY, WOODS, ROCKY, PLAINS, UNDERWATER, AIR, WATERSURFACE, JUNGLE, SWAMP, DESERT, \
+HILLS, MOUNTAINS, SPACEPORT, SEAPORT, STONE, WOODEN, CAVE, MAGIC, UNDERWATER, AIR, WATERSURFACE, \
+METAL.   When this property is on a mob, it only affects the mob.  When on an item, it only affects \
+the owner of the item.  If you want to limit spells/skills used AGAINST a mob, look at immunities.
+
 PROP_RESTRICTSPELLS=\
 Property   : Prop_RestrictSpells\n\r\
 Targets    : Room, Area\n\r\
