@@ -3,6 +3,7 @@
    2. coffeemud.ini entry FLEE has new (blank) option to basically disable fleeing and break a bunch of skills.
    3. Scriptable: When reading script vars, scopes local->quest bound->global will be checked in order.
    4. New DEBUG flag -- INPUT, for debugging ALL user input in string form
+   5. New Property: Prop_RestrictSkills - for limiting skill use by location, or as a curse affect.
 # Build 5.8.5 Released 12/23/2014
    1. Sailing ship creation and distribution now actually works.
    2. Sailing Ships are now only as fast as their item's "ability" score. (1 means 1 move per tick, etc)
